# rdk-rfc

./: CONTRIBUTING.md  Makefile.am  RFC_Reboot.sh  RFCbase.sh  RFCpostprocess.sh  RfcRebootCronschedule.sh  configure.ac  getRFC.sh  isFeatureEnabled.sh  rdk_build.sh  rdk_env.xml  rfc.properties  rfcInit.sh
rfcapi/: Makefile.am  rfcapi.cpp  rfcapi.h  rfccache.cpp  rfccache.h
test/: Makefile.am  gtest_main.cpp  rfcTest.cpp
tr181api/: Makefile.am  tr181api.cpp  tr181api.h
utils/: Makefile.am  README  jsonhandler.cpp  tr181utils.cpp  trsetutils.cpp  trsetutils.h
